# OpenCV-Labs

./: .gitignore  LICENSE  README.md
02_HelloWorld/: CMakeLists.txt
03_GrayImage/: CMakeLists.txt  run.ps1
04_Notebooks/GettingStartedWithImage/: displayImages.h
05_Image/: CMakeLists.txt  image.cpp
06_BasicImageOperations/: CMakeLists.txt  commons.cpp  copyingRegion2Another.cpp  creatingImageMask.cpp  croppingImageSection.cpp
07_MathematicalOperationsOnImages/: CMakeLists.txt  brightnessEnhancement.cpp
08_Application_Sunglasses_Filter/: CMakeLists.txt  image_cv.cpp  sunglasses.cpp
09_BitwiseOperations/: CMakeLists.txt  bitwise.cpp
10_AnnotateImage/: CMakeLists.txt  annotateImage.cpp  image_cv.h
10_ReadVideo/: CMakeLists.txt  propertiesOfVideoCapture.cpp  readVideo.cpp  video_cv.cpp  video_cv.h
11_TakeKeyboardInputs/: takeKeyboardInputs.cpp
11_WriteVideo/: CMakeLists.txt  writeVideo.cpp
12_TakeKeyboardInputs/: CMakeLists.txt  includeLibraries.h  video_cv.cpp
13_TakeMouseInputs/: CMakeLists.txt  includeLibraries.h  takeMouseInputs.cpp
14_BouncingBox_HomeWork/: CMakeLists.txt  bouncingBox.cpp  video_cv.h
15_TrackbarControllers/: CMakeLists.txt  trackbarControllers.cpp
16_QR_CodeScanner/: CMakeLists.txt  qrCodeScanner.cpp
17_BinaryImageProcessing/: 01_thresholding.cpp  02_erosionDilation.cpp  03_implementationOfMorphologicalOperations.cpp  04_openingClosing.cpp  05_connectedComponentAnalysis.cpp  06_contours.cpp  07_blobDetection.cpp  CMakeLists.txt
BasicImageOperations/: commons.h  image_cv.cpp  readCreateImage.cpp  resizingImage.cpp
Docker/: start_docker_opencv.ps1  stop_docker_opencv.ps1
GrayImage/: CMakeLists.txt  README.md  grayImage.cpp  run.bat
HelloWorld/: compile.bat  main.cpp  run.bat
Image/: compileAndRun.ps1  image.cpp  run.ps1
MathematicalOperationsOnImages/: CMakeLists.txt  contrastEnhancement.cpp  datatypeConversion.cpp  pitfallsOfUsingUint8.cpp
Notebooks/: getting_started_with_images.ipynb
VS2022_sample_project/: helloworld.ilk
(+18 files in other folders)
